Implement new UI window for importing selected DBC files
This UI is generated based on the bindings found.

--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -598,7 +598,7 @@
 		<controls:WindowCommands>
 			<Button Name="ImportDBC" Click="ImportSpellDbcButton">
 				<StackPanel Orientation="Horizontal">
-					<TextBlock Text="Import Spell.dbc to SQL" VerticalAlignment="Center"/>
+					<TextBlock Text="Import DBC files to SQL" VerticalAlignment="Center"/>
 				</StackPanel>
 			</Button>
 			<Button Name="ExportDBC" Click="Button_Click">
