Implement Export all DBC binding functionality and UI
Also misc fixes such as a namespace rename on the Datbase classes.

--- a/SpellGUIV2/ImportExportWindow.xaml
+++ b/SpellGUIV2/ImportExportWindow.xaml
@@ -18,13 +18,11 @@
 	<Grid>
 		<TabControl Name="MainTabControl" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10" SelectionChanged="TabControl_SelectionChanged">
       <TabItem Header="Import">
-        <UniformGrid Name="ImportGrid" Columns = "1">
-        </UniformGrid>
+        <UniformGrid Name="ImportGrid" Columns = "1"/>
       </TabItem>
-			<TabItem Header="Export">
-        <UniformGrid Name="ExportGrid">
-        </UniformGrid>
-			</TabItem>
+      <TabItem Header="Export">
+        <UniformGrid Name="ExportGrid" Columns = "1"/>
+      </TabItem>
 		</TabControl>
 	</Grid>
 </controls:MetroWindow>
