Multilingual processing based on DynamicResource.

--- a/SpellGUIV2/App.xaml
+++ b/SpellGUIV2/App.xaml
@@ -11,6 +11,8 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
+                <!--ResourceDictionary Source="pack://SiteOfOrigin:,,,/Languages/enUS.xaml"/-->
+                <ResourceDictionary Source="pack://application:,,,/Languages/enUS.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
